# cycling_safety_perception

./: .gitignore  .gitmodules  CLAUDE.md  LICENSE  Makefile  PLAN.md  README.md  README_cycling_safety_setup.md  biogeme.toml  pyproject.toml  requirements.txt  requirements_sem.txt
.cursor/: rules.mdc
.cursor/rules/: coding.mdc  writing.mdc
cycling_safety_svi/: README_GradCAM.md  __init__.py  apply_safety_model.py  dataset.py  features.py  generate_gradcam_visualizations.py  plots.py  run_gradcam.sh  test_gradcam_setup.py
cycling_safety_svi/exploration/: age_safety_grid.py  cycling_factors_grid.py  demographic_traffic_safety.py  explore_db.py  generate_summary_stats_table.py  image_viewer.py  road_environment_analysis.py  traffic_safety_viewer.py
cycling_safety_svi/modeling/: 1511_14_05_2025_output.txt  README.md  README_safety_landuse_interaction.md  __init__.py  all_interaction_params.json  bikelane_landuse_interaction_model.py  choice_model_benchmark.py  compute_lrt_all_models.py  compute_model4_utilities.py  correlation.py  discrete_choice_model_README.md  example_discrete_choice.py  extract_all_interaction_params.py  interaction_snippet.py  model_result_compilation.py  mxl_functions.py  predict.py  run_segmentation.py  run_sem.py  safety_demographics_interaction_model.py  safety_landuse_interaction_model.py  segmentation.py  (+12 more)
docs/: mkdocs.yml
models/: direct_mediated_mediation_effects.csv  direct_mediated_sem_plot  direct_mediated_sem_results.csv  direct_only_sem_plot  direct_only_sem_plot.dot  direct_only_sem_results.csv  full_mediation_effects.csv  full_sem_plot  full_sem_plot.dot  mediation_effects.csv  mediation_only_mediation_effects.csv  mediation_only_sem_plot  mediation_only_sem_plot.dot  mediation_only_sem_results.csv  minimal_mediation_effects.csv  minimal_sem_plot  minimal_sem_plot.dot  minimal_sem_results.csv  model_comparison.csv  sem_plot  sem_results.csv  simple_mediation_effects.csv  simple_sem_plot  simple_sem_plot.dot  simple_sem_results.csv
references/: table5.tex
scripts/: flatten_manuscript.py  run_demographics_with_retry.sh
(+211 files in other folders)
