[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "cycling_safety_svi"
version = "0.0.1"
description = "A short description of the project."
authors = [
  { name = "Koichi Ito" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.10.0"
dependencies = [
    "biogeme>=3.2.14",
    "dotenv>=0.9.9",
    "graphviz>=0.20.3",
    "ipykernel>=6.29.5",
    "loguru>=0.7.3",
    "matplotlib>=3.10.3",
    "pandas>=2.2.3",
    "seaborn>=0.13.2",
    "semopy>=2.3.11",
    "tabulate>=0.9.0",
    "timm>=1.0.15",
    "tqdm>=4.67.1",
    "typer>=0.15.3",
    "wandb>=0.19.11",
    "zensvi>=1.2.4",
]


[tool.ruff]
line-length = 99
src = ["cycling_safety_svi"]
include = ["pyproject.toml", "cycling_safety_svi/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["cycling_safety_svi"]
force-sort-within-sections = true

